# hotel-ai-order-cursor

./: .env.example  .gitignore  01.ipynb  02.ipynb  03.ipynb  AGENTS.md  Dockerfile  README.md  docker-compose.yml  langgraph.json  pyproject.toml  requirements.txt  service_product_retrieval_debug.ipynb  test_intent_recognition.ipynb  test_service_product_recall.ipynb  托管下单接口  查询商品
.claude/: settings.local.json
.langgraph_api/: .langgraph_ops.pckl
api/: routes.py
app/: main.py
assets/: spu.xlsx
config/: __init__.py  database.py  logging.py  settings.py
core/: database.py  settings.py
docs/: api_order_preview.md  embedding_recall.md  langsmith_tracing.md  project_status.md  prompts.md  repair_order_test_cases.md  sqlite_memory.md  team_meeting_guide.md  tool_protocol.md  workflow.md
domain/: __init__.py  events.py  validation.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
graph/: __init__.py  agent.py  agent_runtime.py  builder.py  checkpoint.py  constants.py  llm.py  llm_callbacks.py  middleware.py  order_fields.py  products.py  prompts.py  state.py  streaming.py  studio.py  submission.py  text_parsing.py
memory/: postgres_log.py  redis_memory.py  sqlite_memory.py
prompts/: system.md
rag/: __init__.py  product_retriever.py  product_store.py  qwen_embedding.py  spu_loader.py
repositories/: __init__.py  product_store.py  qwen_embedding.py  spu_loader.py
schemas/: chat.py  order_preview.py  product.py
scripts/: __init__.py  run_guardrails.py
services/: __init__.py  (+6 more)
(+105 files in other folders)
