[project]
name = "hotel-ai-order-cursor"
version = "0.1.0"
description = "LangGraph + FastAPI hotel repair order agent"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.6,<1",
    "uvicorn[standard]>=0.34.0,<1",
    "python-dotenv>=1.0.1,<2",
    "pydantic>=2.10.4,<3",
    "pydantic-settings>=2.7.1,<3",
    "langchain>=1.3,<2",
    "langchain-openai>=1.2,<2",
    "langgraph>=1.2,<2",
    "langgraph-checkpoint-sqlite>=3.1,<4",
    "redis>=5.2.1,<6",
    "sqlalchemy>=2.0.36,<3",
    "asyncpg>=0.30.0,<1",
    "aiosqlite>=0.20.0,<1",
    "greenlet>=3.0,<4",
    "numpy>=2,<3",
    "openpyxl>=3.1,<4",
    "sentence-transformers>=5,<6",
    "httpx>=0.28.1,<1",
]

[dependency-groups]
dev = [
    "langgraph-cli[inmem]>=0.4.26",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
